src/objects/Project_Leasing__c.object
<CustomObject>
    <description>Archived system function</description>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Leasing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Off_Market__c</fullName>
        <label>Date Off Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_On_Market__c</fullName>
        <label>Date On Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_On_Market__c</fullName>
        <formula>IF( ISBLANK(Date_Off_Market__c ) = FALSE , Date_Off_Market__c - Date_On_Market__c , TODAY() - Date_On_Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leasing_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to contain relationship from Leasing Proposal, as required on the third project.</description>
        <label>Leasing Proposal</label>
        <referenceTo>Lease_Proposal__c</referenceTo>
        <relationshipName>Project_Leasing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing_Expiration_Date__c</fullName>
        <label>Listing Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loopnet_Listing_ID__c</fullName>
        <label>Loopnet Listing ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Use__c</fullName>
        <formula>TEXT (Property__r.Primary_Use__c)</formula>
        <label>Primary Use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_SF__c</fullName>
        <formula>Property__r.Square_Footage__c</formula>
        <label>Property SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>Property__r.PropertyType__c</formula>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Project_Leasing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Agreement_Executed__c</fullName>
        <label>Rep Agreement Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT (Property__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Market</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Off Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <formula>Property__r.Zip_Code__c</formula>
        <label>Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <label>system.project leasing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Off_Market</fullName>
        <columns>NAME</columns>
        <columns>Days_On_Market__c</columns>
        <columns>Client__c</columns>
        <columns>Property__c</columns>
        <columns>Property_SF__c</columns>
        <columns>Rep_Agreement_Executed__c</columns>
        <columns>Listing_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Off Market</value>
        </filters>
        <label>Off-Market</label>
    </listViews>
    <listViews>
        <fullName>On_Market</fullName>
        <columns>NAME</columns>
        <columns>Days_On_Market__c</columns>
        <columns>Client__c</columns>
        <columns>Property__c</columns>
        <columns>Property_SF__c</columns>
        <columns>Rep_Agreement_Executed__c</columns>
        <columns>Listing_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Market</value>
        </filters>
        <label>On-Market</label>
    </listViews>
    <nameField>
        <label>Project Leasing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>system.project leasings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>